Fix CLUSTER_TTL for gce
We uses `expirationDate` to filter the aws clusters to clean up while
`creationTimestamp` to do gce. We need to give gce more time for testing.

Using `5 hours ago` will make the cluster on aws live longer as a
side effect.

https://coreos.slack.com/archives/CBN38N3MW/p1579728093254200?thread_ts=1579539221.077700&cid=CBN38N3MW

--- a/ci-operator/jobs/infra-periodics.yaml
+++ b/ci-operator/jobs/infra-periodics.yaml
@@ -369,7 +369,7 @@ periodics:
       - name: GOOGLE_APPLICATION_CREDENTIALS
         value: "/gcp/gce.json"
       - name: CLUSTER_TTL
-        value: "30 minutes ago"
+        value: "5 hours ago"
       name: "ipi-deprovision"
       resources:
           requests:
