--- a/ci-operator/config/openshift/descheduler/openshift-descheduler-master.yaml
+++ b/ci-operator/config/openshift/descheduler/openshift-descheduler-master.yaml
@@ -8,8 +8,8 @@ build_root:
   image_stream_tag:
     name: release
     namespace: openshift
-    tag: golang-1.10
-canonical_go_repository: github.com/kubernetes-incubator/descheduler
+    tag: golang-1.13
+canonical_go_repository: sigs.k8s.io/descheduler
 images:
 - dockerfile_path: images/descheduler/Dockerfile.origin
   from: base
