--- a/ci-operator/jobs/openshift/descheduler/openshift-descheduler-master-presubmits.yaml
+++ b/ci-operator/jobs/openshift/descheduler/openshift-descheduler-master-presubmits.yaml
@@ -12,7 +12,7 @@ presubmits:
       ci-operator.openshift.io/prowgen-controlled: "true"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-descheduler-master-images
-    path_alias: github.com/kubernetes-incubator/descheduler
+    path_alias: sigs.k8s.io/descheduler
     rerun_command: /test images
     spec:
       containers:
@@ -62,7 +62,7 @@ presubmits:
       ci-operator.openshift.io/prowgen-controlled: "true"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-descheduler-master-unit
-    path_alias: github.com/kubernetes-incubator/descheduler
+    path_alias: sigs.k8s.io/descheduler
     rerun_command: /test unit
     spec:
       containers:
