--- a/ci-operator/jobs/infra-periodics.yaml
+++ b/ci-operator/jobs/infra-periodics.yaml
@@ -372,7 +372,7 @@ periodics:
       - name: GOOGLE_APPLICATION_CREDENTIALS
         value: "/gcp/gce.json"
       - name: CLUSTER_TTL
-        value: "5 hours ago"
+        value: "30 minutes ago"
       name: "ipi-deprovision"
       resources:
           requests:
