oVirt: Switch to the offical release image
Untill now we needed to use our own custom release image
now with that ovirt changes entered the offical release
we can switch to using it

Signed-off-by: Gal Zaidman <gzaidman@redhat.com>

--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-ovirt-e2e.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-ovirt-e2e.yaml
@@ -312,7 +312,7 @@ objects:
       - name: PULL_SECRET_PATH
         value: /etc/openshift-installer/pull-secret
       - name: OPENSHIFT_INSTALL_RELEASE_IMAGE_OVERRIDE
-        value: registry.svc.ci.openshift.org/ovirt/ovirt-release:latest
+        value: ${RELEASE_IMAGE_LATEST}
       - name: USER
         value: test
       - name: HOME
