--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-src.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-src.yaml
@@ -205,8 +205,6 @@ objects:
       env:
       - name: AWS_SHARED_CREDENTIALS_FILE
         value: /etc/openshift-installer/.awscred
-      - name: AWS_REGION
-        value: us-east-1
       - name: AZURE_AUTH_LOCATION
         value: /etc/openshift-installer/osServicePrincipal.json
       - name: GCP_REGION
@@ -292,6 +290,16 @@ objects:
             elif [[ "${CLUSTER_VARIANT}" =~ "large" ]]; then
               master_type=m5.4xlarge
             fi
+            case $((RANDOM % 4)) in
+            0) AWS_REGION=us-east-1
+               ZONE_1=us-east-1b
+               ZONE_2=us-east-1c;;
+            1) AWS_REGION=us-east-2;;
+            2) AWS_REGION=us-west-1;;
+            3) AWS_REGION=us-west-2;;
+            *) echo >&2 "invalid AWS region index"; exit 1;;
+            esac
+            echo "AWS region: ${AWS_REGION} (zones: ${ZONE_1:-${AWS_REGION}a} ${ZONE_2:-${AWS_REGION}b})"
             subnets="[]"
             if [[ "${CLUSTER_VARIANT}" =~ "shared-vpc" ]]; then
               case $((RANDOM % 4)) in
@@ -315,8 +323,8 @@ objects:
             aws:
               type: ${master_type}
               zones:
-              - us-east-1a
-              - us-east-1b
+              - ${ZONE_1:-${AWS_REGION}a}
+              - ${ZONE_2:-${AWS_REGION}b}
         compute:
         - name: worker
           replicas: ${workers}
@@ -324,11 +332,11 @@ objects:
             aws:
               type: m4.xlarge
               zones:
-              - us-east-1a
-              - us-east-1b
+              - ${ZONE_1:-${AWS_REGION}a}
+              - ${ZONE_2:-${AWS_REGION}b}
         platform:
           aws:
-            region:       ${AWS_REGION}
+            region: ${AWS_REGION}
             userTags:
               expirationDate: ${EXPIRATION_DATE}
             subnets: ${subnets}
