--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-upi-src.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-upi-src.yaml
@@ -474,6 +474,7 @@ objects:
             password: "${VSPHERE_PASSWORD}"
             datacenter: dc1
             defaultDatastore: nvme-ds1
+            cluster: devel
         pullSecret: >
           ${PULL_SECRET}
         sshKey: |
