--- a/core-services/release-controller/_releases/release-ocp-4.3-ci.json
+++ b/core-services/release-controller/_releases/release-ocp-4.3-ci.json
@@ -30,7 +30,7 @@
           "ironic-inspector",
           "ironic-ipa-downloader",
           "ironic-machine-os-downloader",
-          "ironic-static-ip-manager",
+          "ironic-static-ip-manager"
         ]
       }
     },
