update feature-es6 job for logging

--- a/ci-operator/jobs/openshift/origin-aggregated-logging/openshift-origin-aggregated-logging-feature-es6x-presubmits.yaml
+++ b/ci-operator/jobs/openshift/origin-aggregated-logging/openshift-origin-aggregated-logging-feature-es6x-presubmits.yaml
@@ -41,6 +41,7 @@ presubmits:
           value: full-integ-aws
         - name: TEST_COMMAND
           value: |
+            export IMAGESTREAM_NAME=feature-es6x
             . openshift/ci-operator/build-image/setup-logging-for-e2e.sh
         image: ci-operator:latest
         imagePullPolicy: Always
@@ -209,6 +210,7 @@ presubmits:
           value: upgrade-full-integ-aws
         - name: TEST_COMMAND
           value: |
+            export IMAGESTREAM_NAME=feature-es6x
             OPENSHIFT_BUILD_NAMESPACE= IMAGE_FORMAT= USE_CUSTOM_IMAGES=true hack/deploy-logging.sh
             export LOGGING_DEPLOY_MODE=upgrade
             . openshift/ci-operator/build-image/setup-logging-for-e2e.sh
