--- a/ci-operator/config/openshift/origin-aggregated-logging/openshift-origin-aggregated-logging-feature-es6x.yaml
+++ b/ci-operator/config/openshift/origin-aggregated-logging/openshift-origin-aggregated-logging-feature-es6x.yaml
@@ -75,11 +75,13 @@ tests:
     from: logging-test-unit
 - as: full-integ-aws
   commands: |
+    export IMAGESTREAM_NAME=feature-es6x
     . openshift/ci-operator/build-image/setup-logging-for-e2e.sh
   openshift_installer_src:
     cluster_profile: aws
 - as: upgrade-full-integ-aws
   commands: |
+    export IMAGESTREAM_NAME=feature-es6x
     OPENSHIFT_BUILD_NAMESPACE= IMAGE_FORMAT= USE_CUSTOM_IMAGES=true hack/deploy-logging.sh
     export LOGGING_DEPLOY_MODE=upgrade
     . openshift/ci-operator/build-image/setup-logging-for-e2e.sh
