periodics: handle release-4.6 branches
Turn on fast-forwarding, config auto-bumping and blocking issue syncing.

Signed-off-by: Steve Kuznetsov <skuznets@redhat.com>

--- a/ci-operator/jobs/infra-periodics.yaml
+++ b/ci-operator/jobs/infra-periodics.yaml
@@ -462,6 +462,7 @@ periodics:
       - --target-dir=.
       - --current-release=4.4
       - --future-release=4.5
+      - --future-release=4.6
       image: registry.svc.ci.openshift.org/ci/auto-config-brancher:latest
       imagePullPolicy: Always
       name: "auto-config-brancher"
@@ -904,6 +905,7 @@ periodics:
       - --config-dir=./ci-operator/config/
       - --current-release=4.4
       - --future-release=4.5
+      - --future-release=4.6
       - --fast-forward
       - --confirm
       - --username=openshift-merge-robot
@@ -974,6 +976,7 @@ periodics:
       - --config-dir=./ci-operator/config/
       - --current-release=4.4
       - --future-release=4.5
+      - --future-release=4.6
       - --confirm
       - --username=openshift-merge-robot
       - --token-path=/etc/github/oauth
