--- a/ci-operator/jobs/openshift/release/openshift-release-infra-periodics.yaml
+++ b/ci-operator/jobs/openshift/release/openshift-release-infra-periodics.yaml
@@ -312,7 +312,7 @@ periodics:
       - name: CLUSTER_DURATION
         value: "9000"
       - name: BRANCH
-        value: "master"
+        value: "4.4"
       - name: CLUSTER_TYPE
         value: metal
       - name: CONFIG_SPEC
