--- a/ci-operator/config/openshift/knative-eventing/openshift-knative-eventing-release-next.yaml
+++ b/ci-operator/config/openshift/knative-eventing/openshift-knative-eventing-release-next.yaml
@@ -92,6 +92,14 @@ images:
       - destination_dir: .
         source_path: /go/bin/ingress
   to: knative-eventing-ingress
+- dockerfile_path: openshift/ci-operator/knative-images/ping/Dockerfile
+  from: base
+  inputs:
+    bin:
+      paths:
+      - destination_dir: .
+        source_path: /go/bin/ping
+  to: knative-eventing-ping
 - dockerfile_path: openshift/ci-operator/knative-images/pong/Dockerfile
   from: base
   inputs:
@@ -108,14 +116,6 @@ images:
       - destination_dir: .
         source_path: /go/bin/sendevent
   to: knative-eventing-sendevent
-- dockerfile_path: openshift/ci-operator/knative-images/sources_controller/Dockerfile
-  from: base
-  inputs:
-    bin:
-      paths:
-      - destination_dir: .
-        source_path: /go/bin/sources_controller
-  to: knative-eventing-sources-controller
 - dockerfile_path: openshift/ci-operator/knative-images/webhook/Dockerfile
   from: base
   inputs:
