--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-openstack-e2e.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-openstack-e2e.yaml
@@ -577,7 +577,14 @@ objects:
           openstack floating ip list --long -f csv -c Description -c "Floating IP Address" | grep $CLUSTER_NAME | cut -f1 -d "," | xargs openstack floating ip delete
 
           echo "Deprovisioning cluster ..."
-          openshift-install --dir /tmp/artifacts/installer destroy cluster
+          attempts=0
+          max_attempts=5
+          until [ ${attempts} -ge ${max_attempts} ]; do
+            openshift-install --dir /tmp/artifacts/installer destroy cluster && break
+            ((attempts++))
+            echo "Deprovision failed, retrying #${attempts}"
+            sleep 5
+          done
         }
 
         # We have to truncate cluster name to 14 chars, because there is a limitation in the install-config
