--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-upi-e2e.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-upi-e2e.yaml
@@ -2038,7 +2038,15 @@ objects:
               aws cloudformation delete-stack --stack-name "${CLUSTER_NAME}-${STACK_SUFFIX}"
             done
 
-            openshift-install --dir /tmp/artifacts/installer destroy cluster
+            echo "Deprovisioning cluster ..."
+            attempts=0
+            max_attempts=5
+            until [ ${attempts} -ge ${max_attempts} ]; do
+              openshift-install --dir /tmp/artifacts/installer destroy cluster && break
+              ((attempts++))
+              echo "Deprovision failed, retrying #${attempts}"
+              sleep 5
+            done
 
             for STACK_SUFFIX in compute-2 compute-1 compute-0 control-plane bootstrap proxy security infra vpc
             do
@@ -2047,13 +2055,21 @@ objects:
           elif [[ "${CLUSTER_TYPE}" == "gcp" ]]; then
             export PATH=${PATH}:${HOME}/shared/google-cloud-sdk/bin
             export CLOUDSDK_CONFIG=${HOME}/shared/gcloudconfig
-            openshift-install --dir ${HOME}/artifacts/installer destroy cluster
+            echo "Deprovisioning cluster ..."
+            attempts=0
+            max_attempts=5
+            until [ ${attempts} -ge ${max_attempts} ]; do
+              openshift-install --dir /tmp/artifacts/installer destroy cluster && break
+              ((attempts++))
+              echo "Deprovision failed, retrying #${attempts}"
+              sleep 5
+            done
             gcloud deployment-manager deployments delete -q ${CLUSTER_NAME}-{worker,control-plane,bootstrap,security,infra,vpc}
           else
             cd /tmp/shared/tf
             rm -rf .terraform
-            terraform init -input=false -no-color
-            terraform destroy -auto-approve -no-color
+            (cd /tmp/artifacts/terraform && terraform init)
+            for r in {1..3}; do (cd /tmp/artifacts/terraform && terraform destroy -auto-approve) && break ; done
           fi
         }
 
