private-org-sync: fail on missing destinations

--- a/ci-operator/jobs/infra-periodics.yaml
+++ b/ci-operator/jobs/infra-periodics.yaml
@@ -951,6 +951,7 @@ periodics:
           - --token-path=/etc/github/oauth
           - --only-org=openshift
           - --confirm
+          - --fail-on-missing-destination
         command:
           - private-org-sync
         image: private-org-sync:latest
