label-sync: allow 47h runtime
We just created 500+ repos and the job is working through the backlog of
adding 50 labels to each. Let's give it more runtime temporarily.

--- a/ci-operator/jobs/infra-periodics.yaml
+++ b/ci-operator/jobs/infra-periodics.yaml
@@ -308,8 +308,9 @@ periodics:
   cron: ""
   decorate: true
   decoration_config:
-    timeout: 28800000000000 # 8h
+    timeout: 47h #TODO(muller): Switch back to 8h on 2020-02-07
   interval: 24h
+  max_concurrency: 1
   name: periodic-label-sync
   skip_cloning: true
   spec:
