label-sync: human-readable timeout

--- a/ci-operator/jobs/infra-periodics.yaml
+++ b/ci-operator/jobs/infra-periodics.yaml
@@ -308,7 +308,7 @@ periodics:
   cron: ""
   decorate: true
   decoration_config:
-    timeout: 28800000000000 # 8h
+    timeout: 8h
   interval: 24h
   name: periodic-label-sync
   skip_cloning: true
