Add a new lane for running ose tests
Signed-off-by: Federico Paolinelli <fpaoline@redhat.com>

--- a/ci-operator/config/openshift-kni/cnf-features-deploy/openshift-kni-cnf-features-deploy-master.yaml
+++ b/ci-operator/config/openshift-kni/cnf-features-deploy/openshift-kni-cnf-features-deploy-master.yaml
@@ -30,4 +30,8 @@ tests:
   commands: make functests-on-ci
   openshift_installer_src:
     cluster_profile: gcp
+- as: e2e-gcp-origin
+  commands: RUN_ORIGIN_TESTS=true make functests-on-ci
+  openshift_installer_src:
+    cluster_profile: gcp
 
