--- a/ci-operator/jobs/openshift-kni/cnf-features-deploy/openshift-kni-cnf-features-deploy-master-presubmits.yaml
+++ b/ci-operator/jobs/openshift-kni/cnf-features-deploy/openshift-kni-cnf-features-deploy-master-presubmits.yaml
@@ -125,6 +125,78 @@ presubmits:
     always_run: true
     branches:
     - master
+    context: ci/prow/e2e-gcp-origin
+    decorate: true
+    decoration_config:
+      skip_cloning: true
+    labels:
+      ci-operator.openshift.io/prowgen-controlled: "true"
+      pj-rehearse.openshift.io/can-be-rehearsed: "true"
+    name: pull-ci-openshift-kni-cnf-features-deploy-master-e2e-gcp-origin
+    rerun_command: /test e2e-gcp-origin
+    spec:
+      containers:
+      - args:
+        - --artifact-dir=$(ARTIFACTS)
+        - --branch=master
+        - --give-pr-author-access-to-namespace=true
+        - --lease-server=http://boskos
+        - --org=openshift-kni
+        - --repo=cnf-features-deploy
+        - --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org
+        - --secret-dir=/usr/local/e2e-gcp-origin-cluster-profile
+        - --sentry-dsn-path=/etc/sentry-dsn/ci-operator
+        - --target=e2e-gcp-origin
+        - --template=/usr/local/e2e-gcp-origin
+        command:
+        - ci-operator
+        env:
+        - name: CLUSTER_TYPE
+          value: gcp
+        - name: CONFIG_SPEC
+          valueFrom:
+            configMapKeyRef:
+              key: openshift-kni-cnf-features-deploy-master.yaml
+              name: ci-operator-master-configs
+        - name: JOB_NAME_SAFE
+          value: e2e-gcp-origin
+        - name: TEST_COMMAND
+          value: RUN_ORIGIN_TESTS=true make functests-on-ci
+        image: ci-operator:latest
+        imagePullPolicy: Always
+        name: ""
+        resources:
+          requests:
+            cpu: 10m
+        volumeMounts:
+        - mountPath: /usr/local/e2e-gcp-origin-cluster-profile
+          name: cluster-profile
+        - mountPath: /usr/local/e2e-gcp-origin
+          name: job-definition
+          subPath: cluster-launch-installer-src.yaml
+        - mountPath: /etc/sentry-dsn
+          name: sentry-dsn
+          readOnly: true
+      serviceAccountName: ci-operator
+      volumes:
+      - name: cluster-profile
+        projected:
+          sources:
+          - secret:
+              name: cluster-secrets-gcp
+          - configMap:
+              name: cluster-profile-gcp
+      - configMap:
+          name: prow-job-cluster-launch-installer-src
+        name: job-definition
+      - name: sentry-dsn
+        secret:
+          secretName: sentry-dsn
+    trigger: (?m)^/test( | .* )e2e-gcp-origin,?($|\s.*)
+  - agent: kubernetes
+    always_run: true
+    branches:
+    - master
     context: ci/prow/e2e-gcp-ovn
     decorate: true
     decoration_config:
