--- a/ci-operator/config/openshift-kni/cnf-features-deploy/openshift-kni-cnf-features-deploy-master.yaml
+++ b/ci-operator/config/openshift-kni/cnf-features-deploy/openshift-kni-cnf-features-deploy-master.yaml
@@ -34,4 +34,8 @@ tests:
   commands: RUN_ORIGIN_TESTS=true make functests-on-ci
   openshift_installer_src:
     cluster_profile: gcp
-
+- as: cnf-e2e-gcp-periodic
+  cron: "* */8 * * *"
+  commands: make functests-on-ci
+  openshift_installer_src:
+    cluster_profile: gcp
