--- a/ci-operator/jobs/infra-periodics.yaml
+++ b/ci-operator/jobs/infra-periodics.yaml
@@ -864,6 +864,9 @@ periodics:
   - base_ref: master
     org: openshift
     repo: release
+  - base_ref: master
+    org: redhat-operator-ecosystem
+    repo: release
   interval: 1h
   labels:
     ci.openshift.io/role: infra
@@ -873,6 +876,7 @@ periodics:
     - args:
       - --dry-run=false
       - --source-path=.
+      - --source-path=../../redhat-operator-ecosystem/release
       - --config-path=core-services/prow/02_config/_config.yaml
       - --plugin-config=core-services/prow/02_config/_plugins.yaml
       - --kubeconfig=/etc/build-farm-credentials/kubeconfig
